test/invalid/type_mismatch.qt
function main() -> int {
    int x = "hello"; 
    return x;
}